--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,28 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  panorama_image: ^0.0.1
+  path: ^1.9.0
+  sqflite: ^2.4.1
 
 dev_dependencies:
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -100,13 +92,32 @@ flutter:
     - assets/images/facilities_updates/waste_management/waste_management_2.png
     - assets/images/facilities_updates/waste_management/waste_management_3.png
     - assets/images/school_map/school_map.png
-
+    - assets/icons/campus study shed.png
+    - assets/icons/clinic icon.png
+    - assets/icons/comfort female.png
+    - assets/icons/comfort male.png
+    - assets/icons/Disability Ramps.png
+    - assets/icons/engineering building icon.png
+    - assets/icons/library icon.png
+    - assets/icons/research building icon.png
+    - assets/icons/sports center.png
+    - assets/icons/waiting area.png
+    - assets/icons/Waste Management.png
+    - assets/images/rooms/AB1303_1.png
+    - assets/images/rooms/test_panorama.png
+    - assets/images/rooms/merged photo 1.png
+    - assets/images/rooms/testinglang.png
+    - assets/images/rooms/final 1.png
+    - assets/images/rooms/academic_building_1.png
+    - assets/images/rooms/AB1_202.png
+    - assets/images/rooms/AB1_203.png
+    - assets/images/rooms/AB1_204.png
+    - assets/images/rooms/AB1_205.png
+    - assets/images/rooms/AB1_206.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
