--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  another_flutter_splash_screen: ^1.2.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2
   panorama_image: ^0.0.1
   path: ^1.9.0
+  permission_handler: ^10.2.0
   sqflite: ^2.4.1
 
 dev_dependencies:
@@ -114,6 +117,15 @@ flutter:
     - assets/images/rooms/AB1_204.png
     - assets/images/rooms/AB1_205.png
     - assets/images/rooms/AB1_206.png
+
+    - assets/splashscreen/splash.gif
+
+    - assets/images/logo/logo_white.png
+    - assets/images/logo/logo_dark.png
+
+    - assets/images/introduction/introduction_1.png
+    - assets/images/introduction/introduction_2.png
+    - assets/images/introduction/introduction_3.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
