--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^1.1.2
   panorama_image: ^0.0.1
   path: ^1.9.0
+  path_provider: ^2.1.5
   permission_handler: ^10.2.0
   sqflite: ^2.4.1
 
