--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,13 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^1.1.2
+  mobile_scanner: ^6.0.2
   panorama_image: ^0.0.1
   path: ^1.9.0
   path_provider: ^2.1.5
   permission_handler: ^10.2.0
+  qr_flutter: ^4.1.0
+  shared_preferences: ^2.3.4
   sqflite: ^2.4.1
 
 dev_dependencies:
@@ -127,6 +130,12 @@ flutter:
     - assets/images/introduction/introduction_1.png
     - assets/images/introduction/introduction_2.png
     - assets/images/introduction/introduction_3.png
+
+    - assets/images/qr_codes/QR_AB1_202.PNG
+    - assets/images/qr_codes/QR_AB1_203.PNG
+    - assets/images/qr_codes/QR_AB1_204.PNG
+    - assets/images/qr_codes/QR_AB1_205.PNG
+    - assets/images/qr_codes/QR_AB1_206.PNG
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
