--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   qr_flutter: ^4.1.0
   shared_preferences: ^2.3.4
   sqflite: ^2.4.1
+  wheel_picker: ^0.2.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
